// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[gatsby-source-wordpress] data resolution resolves correct number of nodes 1`] = `
Array [
  Object {
    "id": "cG9zdDo3NzQ0",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/08/101-2621x1747-1-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo3NzQ4",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/08/1002-4312x2868-1-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo3NzQw",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/08/file-sample_1MB.doc",
  },
  Object {
    "id": "cG9zdDo3NzU2",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/08/1001-5616x3744-1-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo3NzUy",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/08/1003-1181x1772-1.jpg",
  },
  Object {
    "id": "cG9zdDo3NzY0",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/08/1004-5616x3744-1-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo3NzYw",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/08/10-2500x1667-1.jpg",
  },
  Object {
    "id": "cG9zdDo5MjA0",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/09/windows-W1N58KDE8r0-unsplash-1-scaled-e1600819839939.jpg",
  },
  Object {
    "id": "cG9zdDo5MjEw",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/09/windows-W1N58KDE8r0-unsplash-scaled-e1600819062167.jpg",
  },
  Object {
    "id": "cG9zdDo5NQ==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2018/10/aperture-vintage-346923-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo5Ng==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2018/10/brandon-siu-608784-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo5Nw==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2018/10/casey-horner-512022-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo5NzIy",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/09/imagename-300x163-1-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo5ODI3",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/09/5642fae96ade14100be5-scaled.jpg",
  },
  Object {
    "id": "cG9zdDo5OQ==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/03/avatar.jpg",
  },
  Object {
    "id": "cG9zdDoxMDA=",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2018/10/federico-bottos-442265-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDoxMDE=",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2018/10/jordan-steranka-504707-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDoxMDI=",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2018/10/kristopher-roller-110203-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDoxMDM=",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2018/10/zoltan-tasi-482489-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDoxMDQ0NQ==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/sample.doc",
  },
  Object {
    "id": "cG9zdDoxMDQ0OQ==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/sample-mp4-file.mp4",
  },
  Object {
    "id": "cG9zdDoxMDQ1Mw==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/sample-mov-file.mov",
  },
  Object {
    "id": "cG9zdDoxMDQ2Nw==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/sampleinline-html.doc",
  },
  Object {
    "id": "cG9zdDoxMDQ3MQ==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/sample-avi-fileinline-html.avi",
  },
  Object {
    "id": "cG9zdDoxMDQ3NQ==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/sample-mp4-fileinline-html.mp4",
  },
  Object {
    "id": "cG9zdDoxMDQ3OQ==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/sample-mov-fileinline-html.mov",
  },
  Object {
    "id": "cG9zdDoxMDQ=",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2018/10/wordpress-logotype-standard.pdf",
  },
  Object {
    "id": "cG9zdDoxMDQzOQ==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/sample.pdf",
  },
  Object {
    "id": "cG9zdDoxMDUxNQ==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/jessie-mccall-a9_8YKoqIYo-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDoxMDYyMQ==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/mattmullenweg-interview.mp3",
  },
  Object {
    "id": "cG9zdDoxMDYyNw==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/giphy.mp4",
  },
  Object {
    "id": "cG9zdDoxMDcwNQ==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/BabyElephantWalk60.wav",
  },
  Object {
    "id": "cG9zdDoxMDcxNQ==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/Screen-Shot-2020-07-30-at-1.34.09-PM.png",
  },
  Object {
    "id": "cG9zdDoxMDkyNw==",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/10/karsten-winegeart-5zzY1WvIRRQ-unsplash-scaled.jpg",
  },
  Object {
    "id": "cG9zdDoxOTU=",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/03/1024x1024-300x300-1.png",
  },
  Object {
    "id": "cG9zdDozNjI=",
    "mediaItemUrl": "http://localhost:8001/wp-content/uploads/2020/03/84-1000x1000-1.jpg",
  },
]
`;

exports[`[gatsby-source-wordpress] data resolution resolves menus 1`] = `
Object {
  "data": Object {
    "allWpMenu": Object {
      "nodes": Array [
        Object {
          "count": 4,
          "databaseId": 17,
          "id": "dGVybToxNw==",
          "menuItems": Object {
            "nodes": Array [
              Object {
                "childItems": Object {
                  "nodes": Array [],
                },
                "databaseId": 564,
                "id": "cG9zdDo1NjQ=",
                "label": "Activity",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/activity/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [
                    Object {
                      "childItems": Object {
                        "nodes": Array [
                          Object {
                            "label": "test custom link",
                            "url": "https://google.com",
                          },
                        ],
                      },
                      "connectedNode": Object {
                        "node": Object {
                          "featuredImage": Object {
                            "node": Object {
                              "title": "84-1000×1000",
                            },
                          },
                          "title": "Hello world!",
                          "uri": "/2020/02/25/hello-world/",
                        },
                      },
                      "databaseId": 566,
                      "id": "cG9zdDo1NjY=",
                      "label": "Hello world!",
                    },
                  ],
                },
                "databaseId": 565,
                "id": "cG9zdDo1NjU=",
                "label": "Sample Page",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/sample-page/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [
                    Object {
                      "childItems": Object {
                        "nodes": Array [],
                      },
                      "connectedNode": null,
                      "databaseId": 567,
                      "id": "cG9zdDo1Njc=",
                      "label": "test custom link",
                    },
                  ],
                },
                "databaseId": 566,
                "id": "cG9zdDo1NjY=",
                "label": "Hello world!",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/2020/02/25/hello-world/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [],
                },
                "databaseId": 567,
                "id": "cG9zdDo1Njc=",
                "label": "test custom link",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "https://google.com",
              },
            ],
          },
          "name": "main menu",
        },
        Object {
          "count": null,
          "databaseId": 37,
          "id": "dGVybTozNw==",
          "menuItems": Object {
            "nodes": Array [],
          },
          "name": "Primary",
        },
        Object {
          "count": null,
          "databaseId": 38,
          "id": "dGVybTozOA==",
          "menuItems": Object {
            "nodes": Array [],
          },
          "name": "Social Media",
        },
      ],
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress] data resolution resolves menus INCREMENTED 1`] = `
Object {
  "data": Object {
    "allWpMenu": Object {
      "nodes": Array [
        Object {
          "count": 4,
          "databaseId": 17,
          "id": "dGVybToxNw==",
          "menuItems": Object {
            "nodes": Array [
              Object {
                "childItems": Object {
                  "nodes": Array [],
                },
                "databaseId": 564,
                "id": "cG9zdDo1NjQ=",
                "label": "Activity",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/activity/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [
                    Object {
                      "childItems": Object {
                        "nodes": Array [
                          Object {
                            "label": "test custom link",
                            "url": "https://google.com",
                          },
                        ],
                      },
                      "connectedNode": Object {
                        "node": Object {
                          "featuredImage": Object {
                            "node": Object {
                              "title": "84-1000×1000",
                            },
                          },
                          "title": "Hello world! DELTA SYNC",
                          "uri": "/2020/02/25/hello-world/",
                        },
                      },
                      "databaseId": 566,
                      "id": "cG9zdDo1NjY=",
                      "label": "Hello world!",
                    },
                  ],
                },
                "databaseId": 565,
                "id": "cG9zdDo1NjU=",
                "label": "Sample Page",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/sample-page/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [
                    Object {
                      "childItems": Object {
                        "nodes": Array [],
                      },
                      "connectedNode": null,
                      "databaseId": 567,
                      "id": "cG9zdDo1Njc=",
                      "label": "test custom link",
                    },
                  ],
                },
                "databaseId": 566,
                "id": "cG9zdDo1NjY=",
                "label": "Hello world!",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "/2020/02/25/hello-world/",
              },
              Object {
                "childItems": Object {
                  "nodes": Array [],
                },
                "databaseId": 567,
                "id": "cG9zdDo1Njc=",
                "label": "test custom link",
                "nodeType": "MenuItem",
                "target": null,
                "title": null,
                "url": "https://google.com",
              },
            ],
          },
          "name": "main menu",
        },
        Object {
          "count": null,
          "databaseId": 37,
          "id": "dGVybTozNw==",
          "menuItems": Object {
            "nodes": Array [],
          },
          "name": "Primary",
        },
        Object {
          "count": null,
          "databaseId": 38,
          "id": "dGVybTozOA==",
          "menuItems": Object {
            "nodes": Array [],
          },
          "name": "Social Media",
        },
      ],
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress] data resolution resolves pages 1`] = `
Object {
  "data": Object {
    "allWpPage": Object {
      "nodes": Array [
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Sample Page",
          "uri": "/sample-page/",
          "wpChildren": Object {
            "nodes": Array [
              Object {
                "title": "Child page",
              },
            ],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Members",
          "uri": "/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Activity",
          "uri": "/activity/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Child page",
          "uri": "/sample-page/child-page/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "French home page",
          "uri": "/french-home-page/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "ACF Field Test",
          "uri": "/acf-field-test/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Yoast SEO",
          "uri": "/beautiful_slug/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Cart",
          "uri": "/cart/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Shop",
          "uri": "/shop/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "My account",
          "uri": "/my-account/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Checkout",
          "uri": "/checkout/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Inline gatsby-image Gutenberg test",
          "uri": "/inline-gatsby-image-test/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Edited inline html image test",
          "uri": "/edited-inline-html-image-test/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "inline html image edited after this post was saved",
          "uri": "/inline-html-image-edited-after-this-post-was-saved/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Image test 1",
          "uri": "/image-test-1/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Image test 1 duplicate",
          "uri": "/image-test-1-duplicate/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Image test 1 french",
          "uri": "/image-test-1-french/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Relative image path",
          "uri": "/relative-image-path/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Inline image with http protocol",
          "uri": "/inline-image-with-http-protocol/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Inline html non-image media items",
          "uri": "/inline-html-non-image-media-items/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
      ],
    },
    "testPage": Object {
      "title": "Sample Page",
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress] data resolution resolves pages INCREMENTED 1`] = `
Object {
  "data": Object {
    "allWpPage": Object {
      "nodes": Array [
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Sample Page DELTA SYNC",
          "uri": "/sample-page/",
          "wpChildren": Object {
            "nodes": Array [
              Object {
                "title": "Child page",
              },
            ],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Members",
          "uri": "/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Activity",
          "uri": "/activity/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Child page",
          "uri": "/sample-page/child-page/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "French home page",
          "uri": "/french-home-page/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "ACF Field Test",
          "uri": "/acf-field-test/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Yoast SEO",
          "uri": "/beautiful_slug/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Cart",
          "uri": "/cart/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Shop",
          "uri": "/shop/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "My account",
          "uri": "/my-account/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Checkout",
          "uri": "/checkout/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Inline gatsby-image Gutenberg test",
          "uri": "/inline-gatsby-image-test/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Edited inline html image test",
          "uri": "/edited-inline-html-image-test/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "inline html image edited after this post was saved",
          "uri": "/inline-html-image-edited-after-this-post-was-saved/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Image test 1",
          "uri": "/image-test-1/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Image test 1 duplicate",
          "uri": "/image-test-1-duplicate/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Image test 1 french",
          "uri": "/image-test-1-french/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Relative image path",
          "uri": "/relative-image-path/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Inline image with http protocol",
          "uri": "/inline-image-with-http-protocol/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
        Object {
          "acfPageFields": Object {
            "fieldGroupName": "acfPageFields",
          },
          "author": Object {
            "node": Object {
              "name": "Tyler",
            },
          },
          "title": "Inline html non-image media items",
          "uri": "/inline-html-non-image-media-items/",
          "wpChildren": Object {
            "nodes": Array [],
          },
        },
      ],
    },
    "testPage": Object {
      "title": "Sample Page DELTA SYNC",
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress] data resolution resolves posts 1`] = `
Object {
  "data": Object {
    "allWpPost": Object {
      "nodes": Array [
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Image Alignment",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Widget Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Common Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Classic Block",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Embed Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Formatting Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Layout Element Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Columns",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": Object {
            "node": Object {
              "altText": "",
              "sourceUrl": "http://localhost:8001/wp-content/uploads/2020/03/84-1000x1000-1.jpg",
            },
          },
          "title": "Hello world!",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "hierarchical category test",
        },
      ],
    },
    "testPost": Object {
      "title": "Hello world!",
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress] data resolution resolves posts INCREMENTED 1`] = `
Object {
  "data": Object {
    "allWpPost": Object {
      "nodes": Array [
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Image Alignment",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Widget Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Common Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Classic Block",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Embed Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Formatting Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Layout Element Blocks",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "Gutenberg: Columns",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": Object {
            "node": Object {
              "altText": "",
              "sourceUrl": "http://localhost:8001/wp-content/uploads/2020/03/84-1000x1000-1.jpg",
            },
          },
          "title": "Hello world! DELTA SYNC",
        },
        Object {
          "author": Object {
            "node": Object {
              "avatar": Object {
                "url": "http://2.gravatar.com/avatar/5fc9a2065017733c9d5f49a5ecd71d64?s=96&d=mm&r=g",
              },
              "comments": Object {
                "nodes": Array [],
              },
            },
          },
          "featuredImage": null,
          "title": "hierarchical category test",
        },
      ],
    },
    "testPost": Object {
      "title": "Hello world! DELTA SYNC",
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress] data resolution resolves root fields 1`] = `
Object {
  "data": Object {
    "wp": Object {
      "allSettings": Object {
        "discussionSettingsDefaultCommentStatus": "open",
        "discussionSettingsDefaultPingStatus": "open",
        "generalSettingsDateFormat": "F j, Y",
        "generalSettingsDescription": "Just another WordPress site",
        "generalSettingsLanguage": "en_US",
        "generalSettingsStartOfWeek": 1,
        "generalSettingsTimeFormat": "g:i a",
        "generalSettingsTimezone": "",
        "generalSettingsTitle": "Automated testing for Gatsby source WordPress V4",
        "generalSettingsUrl": "http://localhost:8001",
        "readingSettingsPostsPerPage": 10,
        "writingSettingsDefaultCategory": 23,
        "writingSettingsDefaultPostFormat": "",
        "writingSettingsUseSmilies": true,
      },
      "nodeType": null,
      "writingSettings": Object {
        "defaultCategory": 23,
        "defaultPostFormat": "0",
        "useSmilies": true,
      },
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress] data resolution resolves root fields INCREMENTED 1`] = `
Object {
  "data": Object {
    "wp": Object {
      "allSettings": Object {
        "discussionSettingsDefaultCommentStatus": "open",
        "discussionSettingsDefaultPingStatus": "open",
        "generalSettingsDateFormat": "F j, Y",
        "generalSettingsDescription": "Just another WordPress site",
        "generalSettingsLanguage": "en_US",
        "generalSettingsStartOfWeek": 1,
        "generalSettingsTimeFormat": "g:i a",
        "generalSettingsTimezone": "",
        "generalSettingsTitle": "Automated testing for Gatsby source WordPress V4",
        "generalSettingsUrl": "http://localhost:8001",
        "readingSettingsPostsPerPage": 10,
        "writingSettingsDefaultCategory": 23,
        "writingSettingsDefaultPostFormat": "",
        "writingSettingsUseSmilies": true,
      },
      "nodeType": null,
      "writingSettings": Object {
        "defaultCategory": 23,
        "defaultPostFormat": "0",
        "useSmilies": true,
      },
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress] data resolution resolves users 1`] = `
Object {
  "data": Object {
    "allWpUser": Object {
      "nodes": Array [
        Object {
          "databaseId": 1,
          "name": "Tyler",
          "pages": Object {
            "nodes": Array [
              Object {
                "title": "Inline html non-image media items",
              },
              Object {
                "title": "Inline image with http protocol",
              },
              Object {
                "title": "Relative image path",
              },
              Object {
                "title": "Image test 1 french",
              },
              Object {
                "title": "Image test 1 duplicate",
              },
              Object {
                "title": "Image test 1",
              },
              Object {
                "title": "inline html image edited after this post was saved",
              },
              Object {
                "title": "Edited inline html image test",
              },
              Object {
                "title": "Inline gatsby-image Gutenberg test",
              },
              Object {
                "title": "My account",
              },
              Object {
                "title": "Checkout",
              },
              Object {
                "title": "Cart",
              },
              Object {
                "title": "Shop",
              },
              Object {
                "title": "Yoast SEO",
              },
              Object {
                "title": "ACF Field Test",
              },
              Object {
                "title": "French home page",
              },
              Object {
                "title": "Child page",
              },
              Object {
                "title": "Members",
              },
              Object {
                "title": "Activity",
              },
              Object {
                "title": "Sample Page",
              },
            ],
          },
          "posts": Object {
            "nodes": Array [
              Object {
                "title": "hierarchical category test",
              },
              Object {
                "title": "Hello world!",
              },
              Object {
                "title": "Gutenberg: Columns",
              },
              Object {
                "title": "Gutenberg: Layout Element Blocks",
              },
              Object {
                "title": "Gutenberg: Formatting Blocks",
              },
              Object {
                "title": "Gutenberg: Embed Blocks",
              },
              Object {
                "title": "Gutenberg: Classic Block",
              },
              Object {
                "title": "Gutenberg: Common Blocks",
              },
              Object {
                "title": "Gutenberg: Widget Blocks",
              },
              Object {
                "title": "Gutenberg: Image Alignment",
              },
            ],
          },
        },
        Object {
          "databaseId": 2,
          "name": "Test User",
          "pages": Object {
            "nodes": Array [],
          },
          "posts": Object {
            "nodes": Array [],
          },
        },
        Object {
          "databaseId": 3,
          "name": "gatsbyinttests",
          "pages": Object {
            "nodes": Array [],
          },
          "posts": Object {
            "nodes": Array [],
          },
        },
        Object {
          "databaseId": 4,
          "name": "devgatsbyint",
          "pages": Object {
            "nodes": Array [],
          },
          "posts": Object {
            "nodes": Array [],
          },
        },
        Object {
          "databaseId": 5,
          "name": "admin",
          "pages": Object {
            "nodes": Array [],
          },
          "posts": Object {
            "nodes": Array [],
          },
        },
      ],
    },
    "testUser": Object {
      "firstName": "Tyler",
    },
  },
  "extensions": Object {},
}
`;

exports[`[gatsby-source-wordpress] data resolution resolves users INCREMENTED 1`] = `
Object {
  "data": Object {
    "allWpUser": Object {
      "nodes": Array [
        Object {
          "databaseId": 1,
          "name": "Tyler",
          "pages": Object {
            "nodes": Array [
              Object {
                "title": "Inline html non-image media items",
              },
              Object {
                "title": "Inline image with http protocol",
              },
              Object {
                "title": "Relative image path",
              },
              Object {
                "title": "Image test 1 french",
              },
              Object {
                "title": "Image test 1 duplicate",
              },
              Object {
                "title": "Image test 1",
              },
              Object {
                "title": "inline html image edited after this post was saved",
              },
              Object {
                "title": "Edited inline html image test",
              },
              Object {
                "title": "Inline gatsby-image Gutenberg test",
              },
              Object {
                "title": "My account",
              },
              Object {
                "title": "Checkout",
              },
              Object {
                "title": "Cart",
              },
              Object {
                "title": "Shop",
              },
              Object {
                "title": "Yoast SEO",
              },
              Object {
                "title": "ACF Field Test",
              },
              Object {
                "title": "French home page",
              },
              Object {
                "title": "Child page",
              },
              Object {
                "title": "Members",
              },
              Object {
                "title": "Activity",
              },
              Object {
                "title": "Sample Page DELTA SYNC",
              },
            ],
          },
          "posts": Object {
            "nodes": Array [
              Object {
                "title": "hierarchical category test",
              },
              Object {
                "title": "Hello world! DELTA SYNC",
              },
              Object {
                "title": "Gutenberg: Columns",
              },
              Object {
                "title": "Gutenberg: Layout Element Blocks",
              },
              Object {
                "title": "Gutenberg: Formatting Blocks",
              },
              Object {
                "title": "Gutenberg: Embed Blocks",
              },
              Object {
                "title": "Gutenberg: Classic Block",
              },
              Object {
                "title": "Gutenberg: Common Blocks",
              },
              Object {
                "title": "Gutenberg: Widget Blocks",
              },
              Object {
                "title": "Gutenberg: Image Alignment",
              },
            ],
          },
        },
        Object {
          "databaseId": 2,
          "name": "Test User",
          "pages": Object {
            "nodes": Array [],
          },
          "posts": Object {
            "nodes": Array [],
          },
        },
        Object {
          "databaseId": 3,
          "name": "gatsbyinttests",
          "pages": Object {
            "nodes": Array [],
          },
          "posts": Object {
            "nodes": Array [],
          },
        },
        Object {
          "databaseId": 4,
          "name": "devgatsbyint",
          "pages": Object {
            "nodes": Array [],
          },
          "posts": Object {
            "nodes": Array [],
          },
        },
        Object {
          "databaseId": 5,
          "name": "admin",
          "pages": Object {
            "nodes": Array [],
          },
          "posts": Object {
            "nodes": Array [],
          },
        },
      ],
    },
    "testUser": Object {
      "firstName": "Tyler DELTA SYNC",
    },
  },
  "extensions": Object {},
}
`;
